--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -14,7 +14,7 @@ run: state run build
 name: Build (32bit)
 shell: bash
 if: runner.os == 'Windows'
-run: state run build 386
+run: state run build-32bit
 #@ end
 ---
 #@ def steps_build_installscripts():
@@ -30,7 +30,8 @@ if: runner.os == 'Windows'
 run: |
   echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
   export PATH=/c/Program\ Files\ \(x86\)/WiX\ Toolset\ v3.11/bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
-  signtool.exe sign -d "ActiveState State Tool" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} build/state.exe
+
+  state run sign-state-tool
 env:
   CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
   MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
@@ -58,7 +59,7 @@ run: state run generate-update
 name: "Generate Update (32bit)"
 shell: bash
 if: runner.os == 'Windows'
-run: state run generate-update 386
+run: state run generate-update-32bit
 #@ end
 ---
 #@ def steps_installgo():
