--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -80,6 +80,7 @@ steps:
     uses: actions/checkout@v2
   - #@ steps_installgo()
   - #@ steps_setup()
+  - #@ steps_genversion()
   - #@ steps_preprocess()
   - #@ steps_build()
   - #@ steps_genupdate()
