Add dependency to integration tests job

--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -73,6 +73,7 @@ steps:
 name: "Integration Test"
 strategy: *strategy
 runs-on: *runs-on
+needs: [ prepare ]
 env: *env
 timeout-minutes: 25
 steps:
