--- a/.github/workflows-src/build.yml
+++ b/.github/workflows-src/build.yml
@@ -14,6 +14,6 @@ jobs:
   build: #@ jobs_build()
   unittest: #@ jobs_unittest()
   inttest:
-    if: contains(github.event.pull_request.labels.*.name, 'run integration tests')
+    if: contains(github.event.pull_request.labels.*.name, 'run integration tests') || contains(github.event.pull_request.labels.*.name, 'run critical integration tests')
     _: #@ template.replace(jobs_inttest())
   deploy: #@ jobs_deploy()
