--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -1,9 +1,12 @@
 #@ load("steps.lib.yml", "steps_genversion", "steps_preprocess", "steps_build", "steps_build_32bit", "steps_genupdate", "steps_genupdate_32bit", "steps_installgo", "steps_setup", "steps_test", "steps_inttest", "steps_uploadartifacts", "steps_uploadsessartifacts", "steps_downloadsessartifacts", "steps_deletesessartifacts", "steps_deploy", "steps_build_state_msi", "steps_build_languages_msi", "steps_cleanbuild", "steps_validate", "steps_sign", "steps_sign_installscript", "steps_build_installscripts", "steps_uploadsharedartifacts", "steps_downloadsharedartifacts", "steps_downloadallsessartifacts", "steps_sanitizeallsessartifacts")
 
-strategy: &strategy
-  matrix:
-    go-version: [1.13.x]
-    platform: [ ubuntu-latest, macos-latest, windows-latest ]
+#@ def strategy(fail_fast=True):
+matrix:
+  go-version: [1.13.x]
+  platform: [ ubuntu-latest, macos-latest, windows-latest ]
+  fail-fast: #@ fail_fast
+#@ end
+
 runs-on: &runs-on ${{ matrix.platform }}
 env: &env
   ACTIVESTATE_CLI_DISABLE_RUNTIME: true # We don't need Perl or Python
@@ -29,7 +32,7 @@ steps:
 #@ def jobs_build():
 name: Build
 needs: [ prepare ]
-strategy: *strategy
+strategy: #@ strategy()
 runs-on: *runs-on
 env: *env
 timeout-minutes: 10
@@ -54,7 +57,7 @@ steps:
 
 #@ def jobs_unittest():
 name: "Unit Test"
-strategy: *strategy
+strategy: #@ strategy()
 runs-on: *runs-on
 needs: [ prepare ]
 env: *env
@@ -71,7 +74,7 @@ steps:
 
 #@ def jobs_inttest():
 name: "Integration Test"
-strategy: *strategy
+strategy: #@ strategy(False)
 runs-on: *runs-on
 needs: [ prepare ]
 env: *env
