--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -51,6 +51,7 @@ jobs:
         - ubuntu-latest
         - macos-latest
         - windows-latest
+        fail-fast: false
     runs-on: ${{ matrix.platform }}
     needs:
     - prepare
