--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -105,7 +105,8 @@ run: |
     echo "${{ join(github.event.pull_request.labels.*.name, ",") }}"
     
     $LABELS=${{ join(github.event.pull_request.labels.*.name, ",") }}
-    for i in "${LABELS[@]}"
+    IFS=',' read -r -a TESTS <<< "$LABELS"
+    for i in "${TESTS[@]}"
     do
       :
       TEST_SUITE=${i##*:}
@@ -113,7 +114,7 @@ run: |
       export TEST_SUITE_TAGS=$TESTS_SUITE:$TEST_SUITE_TAGS
     done
   fi
-  
+
   SHELL='' go test -timeout 20m ./test/integration -v
 env:
   INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
