--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -104,7 +104,8 @@ run: |
   if [ "${{ contains(github.event.pull_request.labels.*.name, 'run critical integration tests') }}" == "true" ]; then
     echo "${{ join(github.event.pull_request.labels.*.name, ",") }}"
     
-    $LABELS=${{ join(github.event.pull_request.labels.*.name, ",") }}
+    $LABELS="${{ join(github.event.pull_request.labels.*.name, ",") }}"
+    echo "$LABELS"
     IFS=',' read -r -a TESTS <<< "$LABELS"
     for i in "${TESTS[@]}"
     do
