--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,7 @@ jobs:
         - ubuntu-latest
         - macos-latest
         - windows-latest
+        fail-fast: true
     runs-on: ${{ matrix.platform }}
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
@@ -167,6 +168,7 @@ jobs:
         - ubuntu-latest
         - macos-latest
         - windows-latest
+        fail-fast: true
     runs-on: ${{ matrix.platform }}
     needs:
     - prepare
@@ -217,6 +219,7 @@ jobs:
         - ubuntu-latest
         - macos-latest
         - windows-latest
+        fail-fast: false
     runs-on: ${{ matrix.platform }}
     needs:
     - prepare
@@ -275,7 +278,21 @@ jobs:
         MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
     - name: Integration Tests
       shell: bash
-      run: "if [ \"${{ contains(github.event.pull_request.labels.*.name, 'run critical integration tests') }}\" == \"true\" ]; then\n  echo \"${{ join(github.event.pull_request.labels.*.name, \",\") }}\"\n  \n  $LABELS=\"${{ join(github.event.pull_request.labels.*.name, \",\") }}\"\n  echo \"$LABELS\"\n  IFS=',' read -r -a TESTS <<< \"$LABELS\"\n  for i in \"${TESTS[@]}\"\n  do\n    :\n    TEST_SUITE=${i##*:}\n    echo $TEST_SUITE\n    export TEST_SUITE_TAGS=$TESTS_SUITE:$TEST_SUITE_TAGS\n  done\nfi\n\nSHELL='' go test -timeout 20m ./test/integration -v\n"
+      run: |
+        if [ "${{ contains(github.event.pull_request.labels.*.name, 'run critical integration tests') }}" == "true" ]; then
+          $LABELS="${{ join(github.event.pull_request.labels.*.name, ",") }}"
+          echo "$LABELS"
+          IFS=',' read -r -a TESTS <<< "$LABELS"
+          for i in "${TESTS[@]}"
+          do
+            :
+            TEST_SUITE=${i##*:}
+            echo $TEST_SUITE
+            export TEST_SUITE_TAGS=$TESTS_SUITE:$TEST_SUITE_TAGS
+          done
+        fi
+
+        SHELL='' go test -timeout 20m ./test/integration -v
       env:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
