--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -111,7 +111,7 @@ run: |
     if [ "$START" == "run-int-test-only" ]; then
       TEST_SUITE=${i##*:}
       echo $TEST_SUITE
-      export TEST_SUITE_TAGS=$TESTS_SUITE:$TEST_SUITE_TAGS
+      export TEST_SUITE_TAGS=$TEST_SUITE:$TEST_SUITE_TAGS
     fi
   done
 
