--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -114,6 +114,7 @@ jobs:
         LABELS="${{ join(github.event.pull_request.labels.*.name, ',') }}"
         echo "$LABELS"
         IFS=',' read -r -a TESTS <<< "$LABELS"
+        TEST_SUITE_TAGS
         for i in "${TESTS[@]}"
         do
           :
@@ -121,7 +122,7 @@ jobs:
           if [ "$START" == "run-int-test-only" ]; then
             TEST_SUITE=${i##*:}
             echo $TEST_SUITE
-            export TEST_SUITE_TAGS=$TESTS_SUITE:$TEST_SUITE_TAGS
+            TEST_SUITE_TAGS="$TEST_SUITE:$TEST_SUITE_TAGS"
           fi
         done
 
