--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -282,7 +282,7 @@ jobs:
         LABELS="${{ join(github.event.pull_request.labels.*.name, ',') }}"
         echo "$LABELS"
         IFS=',' read -r -a TESTS <<< "$LABELS"
-        TEST_SUITE_TAGS
+        TEST_SUITE_TAGS=""
         for i in "${TESTS[@]}"
         do
           :
