--- a/installers/msi-language/ActiveState/packages.config
+++ b/installers/msi-language/ActiveState/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DeviceId" version="5.1.1" targetFramework="net46" />
+  <package id="GoogleAnalyticsTracker.Core" version="4.5.0" targetFramework="net452" />
+  <package id="GoogleAnalyticsTracker.Simple" version="4.5.0" targetFramework="net452" />
   <package id="Microsoft.Data.Sqlite" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.EntityFrameworkCore" version="1.1.6" targetFramework="net46" />
   <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.6" targetFramework="net46" />
