--- a/internal/runners/run/testdata/printEnv/activestate.yaml
+++ b/internal/runners/run/testdata/printEnv/activestate.yaml
@@ -1,10 +1,10 @@
 project: "https://platform.activestate.com/ActiveState/project?commitID=00010001-0001-0001-0001-000100010001"
 scripts:
   - name: run
-    languages: [bash]
+    language: bash
     value: printenv
   - name: run
-    languages: [batch]
+    language: batch
     value: cmd.exe /C SET
     constraints:
         os: windows
